# cookiecutter-pylsp-plugin

./: .gitignore  README.md  cookiecutter.json  pyproject.toml  setup.cfg
hooks/: post_gen_project.py
{{cookiecutter.project_slug}}/: AUTHORS.txt  LICENSE  README.md  setup.cfg
{{cookiecutter.project_slug}}/.github/: ISSUE_TEMPLATE.md
{{cookiecutter.project_slug}}/pylsp_{{cookiecutter.plugin_name}}/: plugin.py
{{cookiecutter.project_slug}}/test/: conftest.py  test_plugin.py
