[metadata]
name = python-lsp-{{cookiecutter.plugin_name}}
version = 0.1
author = {{cookiecutter.author_name}}
author_email = {{cookiecutter.author_email}}
description = {{cookiecutter.description}}

[options]

packages = find:

install_requires = 
    python-lsp-server

# python_requires = >= 3.6

[options.entry_points]
pylsp = pylsp_{{cookiecutter.plugin_name}} = pylsp_{{cookiecutter.plugin_name}}.plugin
