{%- set license_classifiers = {
    'MIT license': 'License :: OSI Approved :: MIT License',
    'BSD license': 'License :: OSI Approved :: BSD License',
    'ISC license': 'License :: OSI Approved :: ISC License (ISCL)',
    'Apache Software License 2.0': 'License :: OSI Approved :: Apache Software License',
    'GNU General Public License v3': 'License :: OSI Approved :: GNU General Public License v3 (GPLv3)'
} %}
[metadata]
name = python-lsp-{{cookiecutter.plugin_name}}
version = 0.1
author = {{cookiecutter.author_name}}
author_email = {{cookiecutter.author_email}}
description = {{cookiecutter.description}}
{%- if cookiecutter.open_source_license in license_classifiers %}
license = {{ cookiecutter.open_source_license }}
{%- endif %}
classifiers =
    Programming Language :: Python
    Operating System :: OS Independent
{%- if cookiecutter.open_source_license in license_classifiers %}
    {{ license_classifiers[cookiecutter.open_source_license] }}
{%- endif %}


[options]

packages = find:

install_requires = 
    python-lsp-server

# python_requires = >= 3.6

[options.entry_points]
pylsp = pylsp_{{cookiecutter.plugin_name}} = pylsp_{{cookiecutter.plugin_name}}.plugin
